// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButton Component renders correctly with a custom label passed as child 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-form-item"
    style="margin: 0px; justify-self: end; grid-column: -1 / 1;"
  >
    <div
      class="mia-platform-row mia-platform-form-item-row"
    >
      <div
        class="mia-platform-col mia-platform-form-item-control"
      >
        <div
          class="mia-platform-form-item-control-input"
        >
          <div
            class="mia-platform-form-item-control-input-content"
          >
            <button
              class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
              type="submit"
            >
              <div
                class="buttonText"
              >
                <div
                  class="mia-platform-typography bodyM main"
                  role="paragraph"
                >
                  test
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubmitButton Component renders correctly with a render function passed as child 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-form-item"
    style="margin: 0px; justify-self: end; grid-column: -1 / 1;"
  >
    <div
      class="mia-platform-row mia-platform-form-item-row"
    >
      <div
        class="mia-platform-col mia-platform-form-item-control"
      >
        <div
          class="mia-platform-form-item-control-input"
        >
          <div
            class="mia-platform-form-item-control-input-content"
          >
            <div
              class="mia-platform-typography bodyM main"
              role="paragraph"
            >
              test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubmitButton Component renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-form-item"
    style="margin: 0px; justify-self: end; grid-column: -1 / 1;"
  >
    <div
      class="mia-platform-row mia-platform-form-item-row"
    >
      <div
        class="mia-platform-col mia-platform-form-item-control"
      >
        <div
          class="mia-platform-form-item-control-input"
        >
          <div
            class="mia-platform-form-item-control-input-content"
          >
            <button
              class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-color-primary mia-platform-btn-variant-solid button buttonMd"
              type="submit"
            >
              <div
                class="buttonText"
              >
                Submit
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
